exports[`SocialShare has correct email rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href="mailto:?subject=&body=%0D%0Ahttp%3A%2F%2Fgrommet.io"
  id={undefined}
  onClick={undefined}
  target="_self">
  <span
    className="grommetux-anchor__icon">
    <svg
      aria-labelledby="social-email-title"
      className="grommetux-control-icon grommetux-control-icon-social-email grommetux-control-icon--responsive"
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24"
      width="24px">
      <title
        id="social-email-title">
        Share on Email
      </title>
      <g>
        <path
          d="M23,20 L23,6 L12,15 L1,6 L1,20 L23,20 Z M12,12 L22,4 L2,4 L12,12 Z"
          fill="#000000"
          stroke="none" />
      </g>
    </svg>
  </span>
</a>
`;

exports[`SocialShare has correct facebook rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgrommet.io"
  id={undefined}
  onClick={undefined}
  target="_blank">
  <span
    className="grommetux-anchor__icon">
    <svg
      aria-labelledby="social-facebook-title"
      className="grommetux-control-icon grommetux-control-icon-social-facebook grommetux-control-icon--responsive"
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24"
      width="24px">
      <title
        id="social-facebook-title">
        Share on Facebook
      </title>
      <g>
        <path
          d="M14,23 L14,13 L17,13 L18,9 L14,9 L14,7 C14,5.5 15,5 16,5 L18,5 L18,1 C17.5,1 16.5,1 15,1 C12,1 10,3 10,6 L10,9 L7,9 L7,13 L10,13 L10,23 L14,23 Z"
          fill="#000000"
          stroke="none" />
      </g>
    </svg>
  </span>
</a>
`;

exports[`SocialShare has correct google rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fgrommet.io&title=&summary="
  id={undefined}
  onClick={undefined}
  target="_blank">
  <span
    className="grommetux-anchor__icon">
    <svg
      aria-labelledby="social-linkedin-title"
      className="grommetux-control-icon grommetux-control-icon-social-linkedin grommetux-control-icon--responsive"
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24"
      width="24px">
      <title
        id="social-linkedin-title">
        Share on Linkedin
      </title>
      <g>
        <path
          d="M22,23 L18,23 L18,17 C18,15 17.5,13 15,13 C12.5,13 12,15 12,17 L12,23 L8,23 L8,9 L12,9 L12,12 C12,12 13.5,9 17,9 C19.5,9 22,11 22,15.5 L22,23 Z M6,23 L2,23 L2,9 L6,9 L6,23 Z M4,7 C5,7 6.5,6 6.5,4.5 C6.5,3 5,2 4,2 C2.5,2 1.5,3 1.5,4.5 C1.5,6 2.5,7 4,7 Z"
          fill="#000000"
          stroke="none" />
      </g>
    </svg>
  </span>
</a>
`;

exports[`SocialShare has correct linkedin rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fgrommet.io&title=&summary="
  id={undefined}
  onClick={undefined}
  target="_blank">
  <span
    className="grommetux-anchor__icon">
    <svg
      aria-labelledby="social-linkedin-title"
      className="grommetux-control-icon grommetux-control-icon-social-linkedin grommetux-control-icon--responsive"
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24"
      width="24px">
      <title
        id="social-linkedin-title">
        Share on Linkedin
      </title>
      <g>
        <path
          d="M22,23 L18,23 L18,17 C18,15 17.5,13 15,13 C12.5,13 12,15 12,17 L12,23 L8,23 L8,9 L12,9 L12,12 C12,12 13.5,9 17,9 C19.5,9 22,11 22,15.5 L22,23 Z M6,23 L2,23 L2,9 L6,9 L6,23 Z M4,7 C5,7 6.5,6 6.5,4.5 C6.5,3 5,2 4,2 C2.5,2 1.5,3 1.5,4.5 C1.5,6 2.5,7 4,7 Z"
          fill="#000000"
          stroke="none" />
      </g>
    </svg>
  </span>
</a>
`;

exports[`SocialShare has correct text rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fgrommet.io&title=&summary=testing"
  id={undefined}
  onClick={undefined}
  target="_blank">
  <span
    className="grommetux-anchor__icon">
    <svg
      aria-labelledby="social-linkedin-title"
      className="grommetux-control-icon grommetux-control-icon-social-linkedin grommetux-control-icon--responsive"
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24"
      width="24px">
      <title
        id="social-linkedin-title">
        Share on Linkedin
      </title>
      <g>
        <path
          d="M22,23 L18,23 L18,17 C18,15 17.5,13 15,13 C12.5,13 12,15 12,17 L12,23 L8,23 L8,9 L12,9 L12,12 C12,12 13.5,9 17,9 C19.5,9 22,11 22,15.5 L22,23 Z M6,23 L2,23 L2,9 L6,9 L6,23 Z M4,7 C5,7 6.5,6 6.5,4.5 C6.5,3 5,2 4,2 C2.5,2 1.5,3 1.5,4.5 C1.5,6 2.5,7 4,7 Z"
          fill="#000000"
          stroke="none" />
      </g>
    </svg>
  </span>
</a>
`;

exports[`SocialShare has correct title rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fgrommet.io&title=testing&summary="
  id={undefined}
  onClick={undefined}
  target="_blank">
  <span
    className="grommetux-anchor__icon">
    <svg
      aria-labelledby="social-linkedin-title"
      className="grommetux-control-icon grommetux-control-icon-social-linkedin grommetux-control-icon--responsive"
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24"
      width="24px">
      <title
        id="social-linkedin-title">
        Share on Linkedin
      </title>
      <g>
        <path
          d="M22,23 L18,23 L18,17 C18,15 17.5,13 15,13 C12.5,13 12,15 12,17 L12,23 L8,23 L8,9 L12,9 L12,12 C12,12 13.5,9 17,9 C19.5,9 22,11 22,15.5 L22,23 Z M6,23 L2,23 L2,9 L6,9 L6,23 Z M4,7 C5,7 6.5,6 6.5,4.5 C6.5,3 5,2 4,2 C2.5,2 1.5,3 1.5,4.5 C1.5,6 2.5,7 4,7 Z"
          fill="#000000"
          stroke="none" />
      </g>
    </svg>
  </span>
</a>
`;

exports[`SocialShare has correct twitter rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fgrommet.io&text="
  id={undefined}
  onClick={undefined}
  target="_blank">
  <span
    className="grommetux-anchor__icon">
    <svg
      aria-labelledby="social-twitter-title"
      className="grommetux-control-icon grommetux-control-icon-social-twitter grommetux-control-icon--responsive"
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24"
      width="24px">
      <title
        id="social-twitter-title">
        Share on Twitter
      </title>
      <g>
        <path
          d="M22,5 C23,4 23,3 23,2 C22,3 21,4 20,4 C20,4 19,2 17,2 C13,2 12,4 12,8 C6,8 4.099,5.97949244 2,3 C0,5.97949243 2,9 3,10 C3,10 2,10 1,9 C1,11 2.661,13.5836965 5,14 C5,14 4,15 2,14 C2,16 5,18 7,18 C7,18 6,21 0,21 C2,22 5,22 8,22 C16.605,22 22,15 22,8 L22,7 C23,6 23.34,5.38067162 24,4 C23,5 22,5 22,5 Z"
          fill="#000000"
          stroke="none" />
      </g>
    </svg>
  </span>
</a>
`;
